# Arm2Atom_IPC

./: CMakeLists.txt  README.md
Socket/: CMakeLists.txt  socket_client.c  socket_server.c
Socket/client/: CMakeLists.txt  socket_client.c
Socket/server/: CMakeLists.txt  socket_server.c
